tests/NormalTests/paczka1/fuzzy1/90443078.err
Error in line 3: 7r4B S749 94,5
Error in line 1: o4QxR9AFL S749 17,8
Error in line 7: S749 S642 53,4
Error in line 14: S749 S458 49,0
Error in line 22: o4QxR9AFL S642 64,56
Error in line 21: dIzOa7MVEHl S749 71,3
